[package]
name = "aefs"
version = "0.1.0"
authors = ["BennyYip <yebenmy@protonmail.com>"]

[dependencies]
ring = "0.13.0-alpha"
base32 = "*"
openssl = "0.9"

structopt = "0.1.0"
structopt-derive = "0.1.0"
rustbreak = "1.4.0"
error-chain = "0.11"
serde = "1.0.16"
serde_derive = "1.0.16"
bincode = "*"
bytes = "0.4"
